# kant

./: README.md  TODO.org  Tests.hs  bertus.cabal  kant-web.hs  kant-web.sh  kant.cabal  kant.hs  kant.sh  modules.sh  tests.hs
data/: prelude.ka
data/docs/: overview.md
data/samples-bad/: hierarchy.ka  hierarchy2.ka  hurkens.ka
data/samples-good/: common.ka  onlyfuns.ka  record.ka
data/samples/bad/: negative.ka  nonlinear.ka  recrec.ka
data/samples/good/: classical.ka  common.ka  examples.ka  infinite.ka  itt.ka  nested.ka  nprod.ka  record.ka
data/web/: client.js  index-template.html  index.html  style.css
data/web/public/: client.js  style.css
samples-good/: classical.ka
src/: Kant.hs  containers.h  impossible.h
src/Control/Monad/: Fresh.hs
src/Data/: Bwd.hs  Constraint.hs  Disjoint.hs  Dummy.hs  LGraph.hs  Var.hs
src/Kant/: ADT.hs  Binder.hs  Common.hs  ConDestr.hs  Constraint.hs  Cursor.hs  Decl.hs  Desugar.hs  Distill.hs  Elaborate.hs  Env.hs  Environment.hs  Error.hs  Fresh.hs  Lexer.hs  Lexer.x  Monad.hs  Name.hs  Parser.y  Prelude.hs  Pretty.hs  REPL.hs  Reduce.hs  Ref.hs  Sugar.hs  Syntax.hs  Term.hs  TyCheck.hs  Uniquify.hs
src/Kant/Monad/: Base.hs
src/Kant/REPL/: Types.hs
src/Language/Bertus/: Check.hs  Common.hs  Context.hs  Monad.hs  Occurs.hs  Subst.hs  Tele.hs  Tm.hs  Unify.hs
tests/: classical.ka  common.ka  hurkens.ka  onlyfuns.ka  prelude.ka
