Cabal-Version:        >= 1.8
Name:                 kant
Version:              0.0
Author:               Francesco Mazzoli (f@mazzo.li)
Maintainer:           Francesco Mazzoli (f@mazzo.li)
Build-Type:           Simple
License:              GPL-3
Build-Type:           Simple
Category:             Compilers/Interpreters, Dependent Types
Synopsis:             Core dependent language based on OTT (hopefully)
Tested-With:          GHC==7.6.3
Homepage:             https://github.com/bitonic/kant
Bug-Reports:          https://github.com/bitonic/kant/issues
Extra-Source-Files:   src/Kant/impossible.h
Data-Dir:             data
Description:

Source-Repository head
    Type:             git
    Location:         git://github.com/bitonic/kant.git

Library
    Hs-Source-Dirs:   src

    Build-Depends:    base >= 3 && < 5,
                      array,
                      bound >= 0.7,
                      haskeline,
                      hashable,
                      hashtables,
                      mtl,
                      parsec,
                      prelude-extras,
                      transformers,
                      unordered-containers,
                      wl-pprint

    Build-Tools:      alex, happy

    GHC-Options:      -Wall -O2 -fno-warn-unused-do-bind
    Extensions:       CPP

    Exposed-Modules:  Kant.Term,
                      Kant.Decl,
                      Kant.Env,
                      Kant.Reduce,
                      Kant.TyCheck,
                      Kant.Ref,
                      Kant.Elaborate,
                      Kant.Uniquify,
                      Kant.Sugar,
                      Kant.Desugar,
                      Kant.Distill,
                      Kant.Parser
                      Kant.Pretty,
                      Kant.Monad,
                      Kant.REPL,
                      Data.LGraph,
                      Data.Constraint

    Other-Modules:    Kant.Common,
                      Kant.Lexer,
                      Kant.REPL.Types

Executable kant
    Main-Is:          kant.hs

    GHC-Options:      -Wall -O2 -fno-warn-unused-do-bind

    Build-Depends:    base >= 3 && < 5,
                      kant

Test-Suite kant-tests:
    Type:             exitcode-stdio-1.0

    Main-Is:          Tests.hs

    Ghc-Options:      -Wall -O2 -fno-warn-unused-do-bind

    Build-Depends:    base >= 4 && < 5,
                      kant,
                      directory,
                      filepath,
                      HUnit,
                      test-framework,
                      test-framework-hunit,
                      wl-pprint
