Cabal-Version:        >= 1.8
Name:                 kant
Version:              0.0
Author:               Francesco Mazzoli (f@mazzo.li)
Maintainer:           Francesco Mazzoli (f@mazzo.li)
Build-Type:           Simple
License:              GPL-3
Build-Type:           Simple
Category:             Compilers/Interpreters, Dependent Types
Synopsis:             Core dependent language based on OTT (hopefully)
Tested-With:          GHC==7.6.3
Homepage:             https://github.com/bitonic/kant
Bug-Reports:          https://github.com/bitonic/kant/issues
Extra-Source-Files:   src/impossible.h src/containers.h
Data-Dir:             data
Data-Files:           frequency, search.html

Source-Repository head
    Type:             git
    Location:         git://github.com/bitonic/kant.git

Library
    Hs-Source-Dirs:   src

    Build-Depends:    base >= 3 && < 5,
                      array,
                      bound >= 0.7,
                      haskeline,
                      hashable,
                      hashtables,
                      mtl,
                      parsec,
                      prelude-extras,
                      tagged,
                      transformers,
                      unordered-containers,
                      wl-pprint

    Build-Tools:      alex, happy

    GHC-Options:      -Wall -O2 -fno-warn-unused-do-bind
    Extensions:       CPP

    Exposed-Modules:  Data.Bwd,
                      Data.Constraint,
                      Data.LGraph,
                      Kant.ADT,
                      Kant.Cursor,
                      Kant.Decl,
                      Kant.Desugar,
                      Kant.Distill,
                      Kant.Elaborate,
                      Kant.Env,
                      Kant.Monad,
                      Kant.Parser
                      Kant.Pretty,
                      Kant.REPL,
                      Kant.Reduce,
                      Kant.Ref,
                      Kant.Sugar,
                      Kant.Term,
                      Kant.TyCheck,
                      Kant.Uniquify

    Other-Modules:    Kant.Common,
                      Kant.Lexer,
                      Kant.REPL.Types

Executable kant
    Main-Is:          kant.hs

    GHC-Options:      -Wall -O2 -fno-warn-unused-do-bind

    Build-Depends:    base >= 3 && < 5,
                      kant

Test-Suite kant-tests:
    Type:             exitcode-stdio-1.0

    Main-Is:          Tests.hs

    Ghc-Options:      -Wall -O2 -fno-warn-unused-do-bind

    Build-Depends:    base >= 4 && < 5,
                      HUnit,
                      directory,
                      filepath,
                      kant,
                      test-framework,
                      test-framework-hunit,
                      wl-pprint
